# FreeGSM

./: .gitignore  CLAUDE.md  Cargo.toml  FreeGSM-DoH.spec  README.md  build.ps1  build.rs  config.yml  freegsm.manifest  freegsm.rc  requirements-macos.txt  requirements.txt  run.py  run_macos.py  run_macos.sh  verify_lolps.py
docs/: MACOS_PORT.md  migration.md  specification.md
dohproxy/: __init__.py  config.py  divert.py  dnscache.py  dnsutil.py  doh.py  dpi.py  https_proxy.py  main.py  netutil.py  quic_proxy.py  tcp_proxy.py  udp_handler.py
dohproxy/macos/: __init__.py  dns_control.py  main.py  resolver.py  socks_proxy.py  tunnel.py
packaging/: build_macos_app.sh  build_macos_pkg.sh
src/: config.rs  divert.rs  dnsutil.rs  doh.rs  dpi.rs  https_proxy.rs  logging.rs  main.rs  netpkt.rs  rng.rs  tcp_proxy.rs  udp.rs
